syntax = "proto3";

package administration;

option java_package = "ar.edu.itba.tp1g5";
option java_outer_classname = "QueryServiceModel";
option java_multiple_files = true;

service QueryService {
  rpc QueryRooms(QueryRequest) returns (QueryResponse);
  rpc QueryWaitingRoom(QueryRequest) returns (QueryResponse);
  rpc QueryCares(QueryRequest) returns (QueryResponse);
}

message QueryRequest {
  string path = 1;
}

message RoomStatus {
  int32 roomNumber = 1;
  string status = 2;
  // Patient patient = 3;
  string patientName = 3;
  string doctorName = 4;
}

message QueryResponse {
  repeated RoomStatus rooms = 1;
}
